# jklibs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  config.mk  include.mk  include_simple.mk
aiting/: Makefile  Object.mk
build-amd64/: CMakeCache.txt  Makefile  avprocess_test  avstorage_test  cmake_install.cmake  cmcodec  cmyuvtools  fiforead
build-amd64/demo/: Makefile  cmake_install.cmake  demo_base  demo_timer
cmake/: Config.cmake  corei7.cmake
codec/: Makefile  Object.mk  README.md  base.h  cmcodec.c  cmyuv.c  cmyuv.h  cmyuvtools.c  codec.c  codec.h  demo.c  enc_h265.c  enc_h265.h  encoder.c
common/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Object.mk  README.md  bvpu_utils.c  cm_base64.c  cm_base64.h  cm_broadcast.c  cm_broadcast.h  cm_common.h  cm_conf.c  cm_conf.h  cm_conn_tcp.c  cm_conn_tcp.h  cm_conn_udp.c  cm_conn_udp.h  cm_conn_ws.c  cm_conn_ws.h  cm_flash_cfg.c  cm_flash_cfg.h  cm_http.c  cm_http.h  cm_http_download.c  cm_http_download.h  cm_http_upload.c  cm_http_upload.h  cm_list.c  cm_list.h  cm_logprint.h  cm_print.c  cm_print.h  cm_sys.c  cm_sys.h  cm_task.c  cm_task.h  cm_time.c  cm_time.h  (+20 more)
common/busserver/src/: CMakeLists.txt  busserver.c  busserver.h  busserver_ex.c  busserver_ex.h  cmbusclient.c  cmbusserver.c  main.c
common/crypto/: base64.c  base64.h  polaraes.c  polaraes.h
common/demo/: demo_conn.c
common/ex/: Makefile  cm_conf_ex.cpp  cm_msg.cpp  cm_msg.h  cm_uart_ex.cpp  cm_utils_ex.cpp  cm_utils_ex.h
common/ex/json/json/: json_writer.cpp
common/json/: json.c
common/libconfig/: CMakeLists.txt  demo.cfg  libconfig_demo.c
common/misc/: cm_broadcast.c  cm_debug_out.c  cm_debug_out.h  cm_fifo.c  cm_fifo.h  cm_local_debug.c  cm_local_debug.h  cm_suspend.c  cm_suspend.h  cm_wifi.c  cm_wifi.h
common/misc/led/: cm_led.c  cm_led.h
common/unixsocket/: rt_unixsocket.c  rt_unixsocket.h
common/zlog/: zlog.conf
commonex/: Object.mk  cm_conf_ex.h  cm_uart_ex.cpp  cm_uart_ex.h
config/: config_all.mk  config_arm64.mk  config_dm365.mk  config_dm6446.mk  config_hi3515.mk  config_hi3518.mk  config_hi3535.mk  config_mips.mk  config_rasp3.mk  config_rk3308.mk  config_x86.mk
demo/: CMakeLists.txt  Makefile  Object.mk  base_demo.c  base_timer.c  cm_stat.c  demo_conn_tcp.c  demo_cplusplus_list.cpp  demo_crypto.c  demo_debug_out.c  demo_jkbytes.c  demo_json.c  demo_llhttp.c  demo_ncurses.c  demo_opengl.c  demo_opengles.c  demo_small.c  demo_tcp.c  demo_thread.c  demo_uart.c  demo_udp.c  demo_unix_client.c  demo_unix_server.c  demo_utils.c  isProgramRunning.c  jsonc_demo.c  kfclientping.c  list_demo.c  media_option.c  netlink_demo.c  uloop_demo.c
demo/boost/: boost_demo.cpp
demo/op_stream/: h264.cpp  h264.h  h264_parse.cpp  vlc_bits.h
demo/opencl/: Base.cpp  Base.h  main.cpp
demo/opencv/: BaseOperation.cpp  BaseOperation.h  CVFaceDetect.cpp  CVFaceDetect.h  DrawSomething.cpp  DrawSomething.h  face_detect.cpp  fd_video.cpp  image_tool.cpp  opencv.cfg  play_video.cpp  play_video_from_capture.cpp  tutorial.cpp
demo/opengl/: OpenGLBase.cpp  OpenGLBase.h  OpenGLGLUT.cpp  OpenGLGLUT.h  OpenGLQt.h  OpenGLQtWidget.cpp  OpenGLQtWidget.h  Shader.fsh  main.cpp  opengl.cfg
demo/psstream/: PS2ES.cpp  PS2ES.h  PSPacket.h  demo_ps_es.cpp  demo_psstream.cpp  ps_parse.cpp  ps_parse.h
demo/readdata/: demo_readdata.cpp
jkprotocol/: CMakeLists.txt  Makefile  Object.mk  demo_jkprotocol.c  jkprotocol.c  jkprotocol.h
jkprotocol/binary/: demo_jkprotocolbin.c  jkprotocolbin.c  jkprotocolbin.h
jkprotocol/v4/: format.md  v4.c  v4.h  v4_demo.c
jni/: Android.mk  CMakeLists.txt  SAVCodec.c  SAVContainer.c  SAVPriv.c  SAVPriv.h  SAVUtil.c  demo_sav.c  libcodec.cpp
jni/libsav/: SAVCodec.h  SAVCommon.h  SAVContainer.h  SAVTypes.h  SAVUtil.h  config.h
kfconfig/: CMakeLists.txt  Makefile  Object.mk  kfconfig.c  kfconfig.h  kfrouter_start.c
kfmd5/: Makefile  ngx_md5.c
net/: CMakeLists.txt  usock_demo.c
openav/: BaseOperation.cpp  BaseOperation.h  CVFaceDetect.cpp  DrawSomething.cpp  DrawSomething.h  Makefile  Object.mk  catch_imgs.cpp  face_detect.cpp  facedetect.cpp  opencv.cfg  stitching.cpp  stitching_detailed.cpp
openav/gl/: OpenGLBase.cpp  OpenGLBase.h  OpenGLGLUT.cpp  OpenGLQt.cpp  OpenGLQtWidget.h  demo.cpp  f.fsh  glbase.cpp  glbase.h  main.cpp  opengl.cfg  v.vsh
protocol/: CMakeLists.txt  Makefile  Object.mk
protocol/demo/: demo_http-x86  demo_http.c  demo_rasp-x86  demo_rasp.c  demo_tcp.c
protocol/rasp/: kfrasp.c  kfrasp.h  kfrasp_parse_data.c  kfrasp_parse_data.h  kfrasp_string.c  kfrasp_string.h
qrcode/: Makefile  Object.mk  config.h  demo_qrcode.c
recordserver/: Object.mk  base.h  cm_avprocess.c  cm_avprocess.h  cm_avprocess_test.c  jkrecord-amd64  jkrecord-arm64  jkrecord.c  process.c  process.h
storage/: avstorage.c  avstorage.h  avstorage_test.c
tools/: amd64.cmake  build.sh  install-dev.sh  mediaconv.sh  mips32.cmake  pushstream.sh  runfacedetect.sh  setlocalversion
utils/: CMakeLists.txt  uloop_demo.c  utils_demo.c
vdev/: Makefile  Object.mk  README.md  base.h  demo-rasp3  demo-x86  demo.c  operation.c  vdev.c  vdev.h
windows/jklibs/: jklibs.sln
windows/jklibs/jklibs/: ReadMe.txt  jklibs.cpp  jklibs.vcxproj  jklibs.vcxproj.filters  stdafx.cpp
windows/jklibs/opencv/: opencv.vcxproj  opencv.vcxproj.filters  stdafx.h
windows/jklibs/opengl/: opengl.vcxproj  opengl.vcxproj.filters  stdafx.h
